max-encoded-len/tests/max_encoded_len_ui/path_attr.stderr
error: expect: #[max_encoded_len_crate(path::to::crate)]
 --> $DIR/path_attr.rs:5:3
  |
5 | #[max_encoded_len_crate]
  |   ^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `max_encoded_len` found for struct `Example` in the current scope
 --> $DIR/path_attr.rs:9:19
  |
6 | struct Example;
  | --------------- function or associated item `max_encoded_len` not found for this
...
9 |     let _ = Example::max_encoded_len();
  |                      ^^^^^^^^^^^^^^^ function or associated item not found in `Example`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `max_encoded_len`, perhaps you need to implement it:
          candidate #1: `MaxEncodedLen`
